Fixs
Changed Curiculum Image
Changed font-size for menu (too small on mobiles)

--- a/style.css
+++ b/style.css
@@ -470,6 +470,7 @@ nav {
 }
 .nav-links li a {
     color: aliceblue;
+    font-size: 2.5vh;
 
 }
 
@@ -916,7 +917,7 @@ button img {
     }
 
     .nav-links li a{
-        font-size: 30px;
+        font-size: 2.5vh;
 
         color: white;
     }
